# iDTs

./: .gitignore
Analyse_existant/: analyse_v0.md  planning.md
digital_twin_project/: .gitignore  README.md  config.py  digital_twin_it.py  graph_model.py  llm_supervisor.py  main.py  pyproject.toml  requirements.txt  scenarios_generator.py  simpy_event_engine.py  symbolic_rules.py  symbolic_test.py  test_openai_api.py
docs/: UC.html  instruction.md  jobDesc.html  links.md  objectifs.md  orga_STA03_squad.html  planning.md  pleniere.html  pleniere.md  presentation.md  sta03_task.html  staffing.md  strategie_demarrage.md
presentation/: README.md
presentation/backend/: main.py
presentation/frontend/: App.jsx  index.html  package-lock.json  package.json
slides/: slide_1.html  slide_2.html  slide_3.html  slide_8.html
